argocd/manifests/pairdrop/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pairdrop
  labels:
    app.kubernetes.io/name: pairdrop
    app.kubernetes.io/managed-by: argocd
