argocd/manifests/pairdrop/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairdrop
  namespace: pairdrop
  labels:
    app: pairdrop
    app.kubernetes.io/name: pairdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pairdrop
  template:
    metadata:
      labels:
        app: pairdrop
        app.kubernetes.io/name: pairdrop
    spec:
      containers:
        - name: pairdrop
          image: lscr.io/linuxserver/pairdrop:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
