argocd/manifests/pairdrop/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pairdrop-ingress
  namespace: pairdrop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: pairdrop.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pairdrop
                port:
                  number: 3000
    - host: drop.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pairdrop
                port:
                  number: 3000
